syntax = "proto3";
package hecklerpb;

service Heckler {
  rpc HecklerStatus (HecklerStatusRequest) returns (HecklerStatusReport) {}
  rpc HecklerNoop (HecklerNoopRequest) returns (HecklerNoopReport) {}
}

message HecklerStatusRequest {
  repeated string nodes = 1;
}

message HecklerStatusReport {
  map<string,string> node_statuses = 1;
}

message HecklerNoopRequest {
  string begin_rev = 1;
  string end_rev = 2;
  string github_milestone = 3;
  enum Output_format {
    none = 0;
    markdown = 1;
    // XXX 
    tty = 2;
  }
  Output_format output_format = 4;
  repeated string nodes = 5;
}

message HecklerNoopReport {
  string output = 1;
}
